# api-main

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/ivanpashkulev/: main.py
src/ivanpashkulev/chat/: dependencies.py  router.py  schemas.py  service.py
src/ivanpashkulev/core/: config.py
